cluster/apps/default/ingresses/base/authelia/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name authelia
  namespace: default
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.${SECRET_DOMAIN_0}`)
      services:
        - name: *name
          port: 9091
          namespace: authentication-system
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
